# aiuxlab-202509

./: AGENTS.md  AWS_TRANSCRIBE_INTEGRATION_GUIDE.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.js  orval.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  pr-check.yml
.husky/: commit-msg  pre-commit
.serena/: project.yml
docs/: architecture.md  development.md  features-and-priorities.md  github-actions.md  non-functional-requirements.md  product-vision.md  ssr-hydration.md  success-metrics.md  target-users.md  tech-stack.md  voice-intent-spec.md  voice-tech-spec.md
src/app/: layout.tsx  (+3 more)
wasm/: .gitignore  Cargo.toml  LICENSE  README.md
wasm/docs/: network3d_artboard.md
wasm/src/: graph.rs  graph3d.rs  graph_shader.wgsl  lib.rs  params.rs  shader_math.rs
wasm/tests/: allpairs_edges_tests.rs  curve_variants_tests.rs  graph3d_shells_tests.rs  graph_bg_color_tests.rs  graph_defaults_tests.rs  graph_motion_math_tests.rs  graph_params_tests.rs  graph_theme_tests.rs  link_strength_tests.rs  network_graph3d_tests.rs  network_graph_tests.rs  node_mask_tests.rs  nucleus_segments_tests.rs  palette_cyan_update_tests.rs  palette_tests.rs  radial_falloff_tests.rs  random_cloud_tests.rs  shell_counts_debug.rs  shell_inner_bias_tests.rs  slim_network3d_imports_tests.rs  slim_network3d_only_src_tests.rs  slim_network3d_struct_tests.rs  slim_network3d_warnings_tests.rs  tri_strip_order_tests.rs  ui_defaults_tests.rs
wasm/web/: network3d.html
web/: next.config.ts  package.json  tsconfig.json
(+240 files in other folders)
