[package]
name = "wasm_wgpu_demo"
version = "0.1.0"
edition = "2021"
description = "Rust + WebGPU demo compiled to WebAssembly for background graph effects"
repository = "https://github.com/ichimiya/aiuxlab-202509"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "25"
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
glam = { version = "0.27", default-features = false, features = ["libm"] }
web-sys = { version = "0.3", features = [
  "Window", "Document", "HtmlCanvasElement", "Element",
  "EventTarget", "KeyboardEvent"
] }
